# mysql_learn

./: CMakeLists.txt  README.md
private/: call_mysql_impl.hpp  charset_cvt.hpp
public/: call_mysql.hpp  table_struct.hpp
src/: call_mysql.cpp  call_mysql_impl.cpp
test/: CMakeLists.txt  main.cpp
