CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET (TARGET_NAME mysql_test)
PROJECT(${TARGET_NAME})

MESSAGE(STATUS "==================================")
MESSAGE(STATUS "Start:${TARGET_NAME}")

ADD_DEFINITIONS(-std=c++11)

# ---[ Output path
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

FIND_PACKAGE( OpenCV REQUIRED )

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS}
	${call_mysql_INCDIR}
	${CMAKE_CURRENT_SOURCE_DIR}
	)

ADD_EXECUTABLE(${TARGET_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
TARGET_LINK_LIBRARIES(${TARGET_NAME} 
	${OpenCV_LIBS} 
	${call_mysql_LIBS}
	)